[package]
name           = "prometheus_exporter_base"
version        = "1.4.0"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>"]
edition        = "2018"
description    = "Prometheus Rust exporters base crate with optional boilerplate"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_exporter_base"
documentation  = "https://docs.rs/prometheus_exporter_base"
homepage       = "https://github.com/MindFlavor/prometheus_exporter_base"

keywords       = ["prometheus", "exporter"]
categories     = ["database"]

[dependencies]
log                  = "0.4.8"
env_logger           = "0.9.3"
thiserror            = "1.0"
num                  = "0.4"
hyper                = { version = "1.4", features = ["server"], optional = true }
hyper-rustls         = { version = "0.27", features = ["rustls-native-certs"], optional = true }
hyper-util           = { version = "0.1.8", optional = true }
http                 = { version = "1.1",  optional = true }
http-body-util       = { version = "0.1.2", optional = true }
base64               = { version = "0.13.1", optional = true }
tokio                = { version = "1.0", optional = true }
tokio-rustls         = { version = "0.26.0", optional = true }
rustls               = { version = "0.23.13", optional = true }
rustls-pemfile       = { version = "2.1.3", optional = true }
serde                = { version = "1.0.210", features = ["derive"], optional = true }

[features]
hyper_server = ["hyper", "hyper-rustls", "hyper-util", "tokio", "tokio-rustls", "rustls", "rustls-pemfile", "http", "http-body-util", "base64"]
default = ["hyper_server", "serde"]

[dev-dependencies]
tokio                = { version = "1.0", features = ["full"] }
clap                 = { version = "4.0", features = ["cargo"] }

[[example]]
name = "simple"
required-features = ["hyper_server"]

[[example]]
name = "folder_size"
required-features = ["hyper_server"]
